
Version 7.2.8 - 2024-09-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.7 - 2024-08-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.6 - 2024-07-17
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.5 - 2024-07-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.4 - 2024-06-15
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.3 - 2024-06-02
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.2 - 2024-05-15
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.1 - 2024-05-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Do not accept compressed content from unauthenticated request (#13142)
* Set loading eager to visible xxx2many on form view
* Add loading attribute to form view
* Add a contextual read limit on Model.read
* Add a contextual read limit for related fields
* Add xml_id field on ModelStorage
* Add send_message methods
* Store model on ir.rule.group
* Store model on ir.model.button
* Store model and field name on ir.model.field.access
* Store model name on ir.model.access
* Store model name on ir.model.field
* Add fmany2one field
* Allow creation of foreign key on non primary key
* Include context information in access error
* Remove trytond-worker max tasks per child option for Python <= 3.10
* Do not copy readonly relational fields
* Support list of single value in sortable_values tools
* Allow resetting password of user via RPC
* Support cached_property on object with __slots__
* Allow creating indexes concurrently
* Allow skipping index creation
* Add assert methods to test tools
* Set ELLIPSIS option flag on doctest
* Set IGNORE_EXCEPTION_DETAIL option flag on doctest